--- a/qtgui/exe/GeoDmsGuiQt.vcxproj
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\DmsDetailPages.h" />
+    <ClInclude Include="src\DmsGuiParameters.h" />
     <ClInclude Include="src\dms_memory_leak_debugging.h" />
     <ClInclude Include="src\StatisticsBrowser.h" />
     <ClInclude Include="src\TestScript.h" />
