--- a/qtgui/exe/GeoDmsGuiQt.vcxproj
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj
@@ -145,7 +145,12 @@
     <ClCompile Include="src\DmsGuiParameters.cpp" />
     <ClCompile Include="src\DmsMainWindow.cpp" />
     <ClCompile Include="src\DmsOptions.cpp" />
-    <ClCompile Include="src\DmsToolbar.cpp" />
+    <ClCompile Include="src\DmsToolbar.cpp">
+      <DynamicSource Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">input</DynamicSource>
+      <QtMocFileName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(Filename).moc</QtMocFileName>
+      <DynamicSource Condition="'$(Configuration)|$(Platform)'=='Release|x64'">input</DynamicSource>
+      <QtMocFileName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(Filename).moc</QtMocFileName>
+    </ClCompile>
     <ClCompile Include="src\DmsTreeView.cpp" />
     <ClCompile Include="src\DmsValueInfo.cpp" />
     <ClCompile Include="src\DmsViewArea.cpp" />
@@ -166,7 +171,7 @@
     <QtMoc Include="src\DmsFileChangedWindow.h" />
     <QtMoc Include="src\DmsErrorWindow.h" />
     <ClInclude Include="src\DmsGuiParameters.h" />
-    <ClInclude Include="src\DmsToolbar.h" />
+    <QtMoc Include="src\DmsToolbar.h" />
     <ClInclude Include="src\dms_memory_leak_debugging.h" />
     <ClInclude Include="src\StatisticsBrowser.h" />
     <ClInclude Include="src\TestScript.h" />
