Added gdal, proj dlls to delay load list for clc and geo dlls. See issue https://github.com/ObjectVision/GLOBIO_dms/issues/28

--- a/clc/dll/Clc.vcxproj
+++ b/clc/dll/Clc.vcxproj
@@ -50,6 +50,12 @@
       <PreprocessorDefinitions>DMCLC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link />
+    <Link>
+      <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">gdald.dll; proj_d.dll</DelayLoadDLLs>
+    </Link>
+    <Link>
+      <DelayLoadDLLs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">gdal.dll; proj.dll</DelayLoadDLLs>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\AnyAll.cpp" />
