--- a/stg/dll/StgDll.vcxproj
+++ b/stg/dll/StgDll.vcxproj
@@ -49,7 +49,8 @@
       <DelayLoadDLLs>gdal.dll</DelayLoadDLLs>
     </Link>
     <Link Condition="'$(Configuration)'=='Debug'">
-      <DelayLoadDLLs>gdald.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>gdald.dll; proj_d.dll</DelayLoadDLLs>
+      <AdditionalLibraryDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\Cicada\dev\geodms\branches\geodms_gdal\bin\Debug\x64\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
