overlay_polygon nu ook voor fpoint en dpoint o.b.v. boost::geometry

--- a/geo/dll/GeoDLL.vcxproj.filters
+++ b/geo/dll/GeoDLL.vcxproj.filters
@@ -67,6 +67,9 @@
     <ClInclude Include="src\BoundingBoxCache.h">
       <Filter>Geo Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\BoostGeometry.h">
+      <Filter>Geo Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Canyon.cpp">
