--- a/geo/dll/GeoDLL.vcxproj
+++ b/geo/dll/GeoDLL.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="..\..\rtc\dll\src\ipolygon\polygon.hpp" />
     <ClInclude Include="src\AbstrBoundingBoxCache.h" />
     <ClInclude Include="src\bi_graph.h" />
+    <ClInclude Include="src\BoostGeometry.h" />
     <ClInclude Include="src\BoundingBoxCache.h" />
     <ClInclude Include="src\Dijkstra.h" />
     <ClInclude Include="src\GeoBase.h" />
