--- a/sym/dll/DmSym.vcxproj
+++ b/sym/dll/DmSym.vcxproj
@@ -44,6 +44,9 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.21006.1</_ProjectFileVersion>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnableManifest>true</VcpkgEnableManifest>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>../../rtc/dll/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
