DmsDef.props now specifies using vcpkg manifests.

--- a/DmsDef.props
+++ b/DmsDef.props
@@ -15,6 +15,9 @@
     <EnableUnitySupport>true</EnableUnitySupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnableManifest>true</VcpkgEnableManifest>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
