--- a/rtc/dll/DmRtc.vcxproj.filters
+++ b/rtc/dll/DmRtc.vcxproj.filters
@@ -806,9 +806,6 @@
     <ClInclude Include="src\set\DataCompare.h">
       <Filter>Set oriented functions&amp;classes</Filter>
     </ClInclude>
-    <ClInclude Include="src\ipolygon\gtl.hpp">
-      <Filter>ipolygon</Filter>
-    </ClInclude>
     <ClInclude Include="src\utl\SourceLocation.h">
       <Filter>Utility Files</Filter>
     </ClInclude>
@@ -857,6 +854,7 @@
     <ClInclude Include="src\geo\IterTraits.h" />
     <ClInclude Include="src\ser\FormattingFlags.h" />
     <ClInclude Include="src\geo\AssocTower.h" />
+    <ClInclude Include="src\geo\RingIterator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\act\Actor.cpp">
