Changed gdaldata and proj4data locations in StgDll.vcxproj to comply to manifest mode which installs libraries locally. Now pointing to:       <gdaldata Include="..\..\vcpkg_installed\$(Platform)-windows\$(Platform)-windows\share\gdal\**\*.*" />       <projdata Include="..\..\vcpkg_installed\$(Platform)-windows\$(Platform)-windows\share\proj\**\*.*" />

--- a/stg/dll/StgDll.vcxproj
+++ b/stg/dll/StgDll.vcxproj
@@ -118,8 +118,8 @@
   </ImportGroup>
   <Target Name="AfterBuild">
     <ItemGroup>
-      <gdaldata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\**\*.*" />
-      <projdata Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\proj\**\*.*" />
+      <gdaldata Include="..\..\vcpkg_installed\$(Platform)-windows\$(Platform)-windows\share\gdal\**\*.*" />
+      <projdata Include="..\..\vcpkg_installed\$(Platform)-windows\$(Platform)-windows\share\proj\**\*.*" />
     </ItemGroup>
     <Copy SourceFiles="@(gdaldata)" DestinationFolder="$(TargetDir)gdaldata" />
     <Copy SourceFiles="@(projdata)" DestinationFolder="$(TargetDir)proj4data" />
