Fix Shv!DataView fonts, broken at Qt 6.8.0, by registering misc/fonts/dmstext.ttf at Windows GDI.

--- a/shv/dll/ShvDLL.vcxproj
+++ b/shv/dll/ShvDLL.vcxproj
@@ -233,6 +233,7 @@
   <Target Name="AfterBuild">
     <ItemGroup>
       <dms_ttf_file Include="..\..\res\fonts\dms.ttf" />
+      <dms_ttf_file Include="..\..\qtgui\exe\res\fonts\dmstext.ttf" />
     </ItemGroup>
     <Copy SourceFiles="@(dms_ttf_file)" DestinationFolder="$(TargetDir)misc\fonts\" SkipUnchangedFiles="true" />
   </Target>
